--- a/app/views/admin/settings/index.html.haml
+++ b/app/views/admin/settings/index.html.haml
@@ -3,10 +3,15 @@
 -#  See the COPYING file at the top-level directory or at
 -#  https://github.com/puzzle/cryptopus.
 
-%h1= t('.title')
-- @submit_button_text = t(:update)
-= form_tag :update_all_admin_settings, role: 'form' do
-  - @settings.each do |setting|
-    = input_field_setting(setting)
-  %br/
-  = submit_tag t('admin.settings.index.save'), class: 'btn btn-primary'
+%ul.settings-nav.nav.nav-tabs
+  %li#accounts.tab.active
+    %a{"data-toggle" => "tab", href: "#general-settings"}
+      General
+  %li#groups.tab
+    %a{"data-toggle" => "tab", href: "#ldap-settings"}
+      LDAP
+.tab-content.settings-content
+  #general-settings.tab-pane.fade.in.active
+    = render partial: 'general'
+  #ldap-settings.tab-pane.fade
+    = render partial: 'ldap'
