API Zugriff Team Deaktivieren/Aktivieren / STI User - User::Api

--- a/app/views/teams/_form.html.haml
+++ b/app/views/teams/_form.html.haml
@@ -13,6 +13,12 @@
     = image_tag('info.svg', class: 'info_icon private_info')
     %p.description.private
       = t('teams.description.private')
+    -if api_is_activated?
+      .checkbox
+        -if team_has_permisson_for_api?
+          = check_box_tag('api', true, true)
+        -else
+          = check_box_tag('api')
   .form-group
     = f.label :description
     = f.text_area :description, class: 'form-control'
