--- a/app/views/accounts/show.html.haml
+++ b/app/views/accounts/show.html.haml
@@ -25,6 +25,10 @@
   #hidden_password{style: "display:none"}
     = @account.cleartext_password
   %br/
+  - if @account.identifier
+    %p
+      %strong='Identifier:'
+      = @account.identifier
   %p
     %strong= t '.last_change', time_ago: (time_ago_in_words @account.updated_at)
   %br/
