--- a/app/views/teams/_form.html.haml
+++ b/app/views/teams/_form.html.haml
@@ -16,5 +16,12 @@
   .form-group
     = f.label :description
     = f.text_area :description, class: 'form-control'
+  -if current_user.api_is_activated?
+    .form-group
+      -if team_has_permisson_for_api?
+        = check_box_tag('api', value=nil, checked=true)
+      -else
+        = check_box_tag('api', value='api')
+      = label_tag 'api', 'Api Access'
   = f.submit @submit_button_text, class: 'btn btn-primary'
   =link_to "Cancel", teams_path, {:class=>"btn btn-primary"}
