--- a/app/views/user_settings/index.html.haml
+++ b/app/views/user_settings/index.html.haml
@@ -12,6 +12,10 @@
 -if current_user.api_is_activated?
   %table.table
     %tr
+      %th API ID:
+      %td
+        = current_user.apikey.id
+    %tr
       %th API KEY:
       %td
         = show_api_key
