--- a/app/views/user_settings/index.html.haml
+++ b/app/views/user_settings/index.html.haml
@@ -19,4 +19,11 @@
       %th API KEY:
       %td
         = show_api_key
+    - if current_user.apikey.locked?
+      %tr
+        %th API locked:
+        %td
+          = link_to 'Unlock', user_setting_user_settings_unlock_api_path(current_user.apikey.id),
+            method: :post, class: 'btn btn-primary pull-right'
+
 
